# mini-geojson

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: departements.geojson  min_small-departements-keys-to-delete-empty-null-values.geojson  min_small-departements-keys-to-delete.geojson  min_small-departements-keys-to-keep.geojson  small-departements-key-to-delete-and-empty-null-values.geojson  small-departements.geojson  test-geojson-geometry-no-coords.geojson  test-geojson-properties-null.geojson  test-geojson-properties-to-remove.geojson  test-geojson-true-truncated.geojson  test-geojson-true.geojson  test_write.geojson  test_write_pretty.geojson
src/: args.rs  file_operations.rs  geo_operations.rs  lib.rs  main.rs  metrics.rs
tests/: integration_test.rs  unit_test.rs
