[package]
name = "mini-geojson"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { version = "1.0.56" }
clap = { version = "4.4.14", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde = { version = "1.0.195", features = ["derive"] }
log = { version = "0.4.20" }
pretty_env_logger = { version = "0.5.0" }
